add emma plugin