@@ -137,6 +137,35 @@
                     </configuration>
                 </plugin>
                 <plugin>
+                    <groupId>org.sonatype.maven.plugin</groupId>
+                    <artifactId>emma-maven-plugin</artifactId>
+                    <version>1.2</version>
+                    <inherited>true</inherited>
+                    <executions>
+                        <execution>
+                            <id>instrument</id>
+                            <phase>process-classes</phase>
+                            <goals>
+                                <goal>instrument</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>report</id>
+                            <phase>test</phase>
+                            <goals>
+                                <goal>emma</goal>
+                            </goals>
+                            <configuration>
+                                <outputEncoding>UTF-8</outputEncoding>
+                                <sourceEncoding>UTF-8</sourceEncoding>
+                            </configuration>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <verbose>true</verbose>
+                    </configuration>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>2.10.4</version>
@@ -213,6 +242,14 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <argLine>-Xverify:none</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -323,6 +360,10 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.maven.plugin</groupId>
+                <artifactId>emma-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
